Updated framework to incorporate logging